<resources>
    <string name="app_name">Nothing21</string>
    <string name="signin_and_register">Sign In / Register</string>
    <string name="existing_customers">Existing Customers</string>
    <string name="email_address">Email Address</string>
    <string name="password">Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="new_customer">New Customer</string>
    <string name="register_now">register now</string>
    <string name="create_account">Create Account</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="emirate">Emirate</string>
    <string name="address">Address</string>
    <string name="region">Region</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="note_info">I WANT TO RECEIVE ALL THE NEWS AND INFORMATION VIA EMAIL</string>
    <string name="note_privacy_policy">I ACCEPT THE TERMS OF USE</string>
    <string name="note_read_privacy_policy">I HAVE READ AND UNDERSTAND THE PRIVACY AND COOKIES POLICY</string>
    <string name="save">Save</string>
    <string name="are_you_sure_you_want_to_exit_this_app">Are you sure you want to exit this app?</string>
    <string name="bag">Bag</string>
    <string name="check_out">checkout</string>
    <string name="vouchers">Vouchers</string>
    <string name="points">Points</string>
    <string name="wallet">Wallet</string>
    <string name="processing">Processing</string>
    <string name="shiped">Shiped</string>
    <string name="returns">Returns</string>
    <string name="my_orders">My Orders</string>
    <string name="more_services">More Services</string>
    <string name="support">Customer Care</string>
    <string name="panding_support">Panding Support</string>
    <string name="share_earn"><![CDATA[Share & Earn]]></string>
    <string name="wishlist">Wishlist</string>
    <string name="recently_view">Recently Viewed</string>
    <string name="search_product_name">Search product name</string>
    <string name="search_product_name1">Search Categories, products, type ..</string>
    <string name="offers">Offers</string>
    <string name="please_wait">Please wait...</string>
    <string name="network_failure">Sorry! Not connected to internet</string>
    <string name="wrong_email">Can\'t enter worng email.</string>
    <string name="required">Required</string>
    <string name="please_login">Please Login</string>
    <string name="not_available">Not available</string>
    <string name="quentity">Quantity:</string>
    <string name="size">Size:</string>
    <string name="are_you_sure_you_want_to_delete_this_cart_item">Are you sure you want to delete this item from cart?</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout_this_app">Are you sure you want to logout to this app?</string>
    <string name="add_address">Add Address</string>
    <string name="add">Add</string>

    <string name="place_api_key">AIzaSyC4Eg_qGdkZrcW-td6QsmJAk2g4nzPaat0</string>
    <string name="please_select_address">Please select delivery address</string>
    <string name="pay">Pay</string>
    <string name="next">Next</string>
    <string name="card_not_valid">Card Not Valid</string>
    <string name="please_complete_form">Please complete the form</string>
    <string name="please_select_payment_method">Please select payment method</string>
    <string name="order_placed_successfully">Order placed successfully</string>
    <string name="please_select_delivery_address">please select delivery address</string>

    <!-- key for map-->
    <string name="google_maps_key">AIzaSyAXTJrvnDTC8AjYzK2dPatsSAMJaTIc-c0</string>
    <string name="add_to_my_bag">Add to my Bag</string>
    <string name="item_added">Item added</string>
    <string name="color">Color</string>
    <string name="delivery_two_day">Delivery in two days</string>
    <string name="other_product">Other products</string>
    <string name="please_select_color">Please selcet color</string>
    <string name="please_select_size">Please select size</string>
    <string name="rating_review">Ratings and reviews</string>
    <string name="are_you_sure_you_want_to_delete_this_product_from_wish_list">Are you sure you want to delete this product from wish list?</string>
    <string name="no_color_available">no color available</string>
    <string name="apply">Apply</string>
    <string name="no_size_available">no size available</string>
    <string name="please_select_category">Please select category</string>
    <string name="no_category_available">no category_available</string>
    <string name="category">Category</string>
    <string name="bag_is_empty">bag is empty</string>
    <string name="product__out_of_stock">product out of stock</string>
    <string name="profile">Profile</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="select_image_from">Select immage from</string>
    <string name="write_review">write review</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="submit">Submit</string>
    <string name="order_history">Order History</string>
    <string name="retu">Return</string>
    <string name="return_order">Return Order</string>
    <string name="type_reason">Type Reason</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="description">Description</string>
    <string name="succssfully_send">Successfully send.</string>
    <string name="about">About Us</string>
    <string name="order_return">Order Return</string>
    <string name="item_updated">Item Updated</string>
    <string name="contact_us">Contact Us</string>
    <string name="login_signup">Login/Signup</string>
    <string name="sub_categoty">Sub-Category</string>
    <string name="please_select_sub_category">Please select sub category</string>

    <string name="forgotpasswordtext">Please, enter your email address. You will
       <br /> receive a link to create a new password via <br /> email. </string>

    <string name="forgot_password1">Forgot Password</string>
    <string name="our_policy">Our policies</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="shipping_policy">Shipping Policy</string>
    <string name="return_policy">Return Policy</string>
    <string name="account">Account</string>
    <string name="order_issues">Order Issues</string>
    <string name="delivery">Delivery</string>
    <string name="return_refund">Return and refund</string>
    <string name="payment_promos">Payment and promos</string>
    <string name="please_check_your_email">Email is sent check inbox/Junk</string>
    <string name="email_not_register">Email is not registered with Nothing21.</string>
    <string name="customer_care">Customer care</string>
    <string name="please_select_category_and_sub_cat">Please select category and sub category</string>
    <string name="delivery_address">Delivery address</string>
    <string name="delivery_charge">Delivery charge</string>
    <string name="total">Total</string>
    <string name="save_address">Save Address</string>
    <string name="add_product">Product and stock</string>
    <string name="stock_account">Account</string>
    <string name="help">Help</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="password_updated_successfully">Password upadated successfully</string>
    <string name="pass_not_matched">"password doesn't matched "</string>
    <string name="area">Area</string>
    <string name="building_name">Building name</string>
    <string name="contact_number">Contact Number</string>
    <string name="apartment">Apartment</string>
    <string name="enter_wrong_password">You have entered wrong Email or password</string>
    <string name="size_out_of_stock">out of stock size</string>
    <string name="city">City</string>
    <string name="nearest_landmark">Nearest landmark</string>
    <string name="flat_villa">Flat/villa number</string>
    <string name="add_another_address">Add another address</string>
    <string name="zipcode">Zipcode</string>
    <string name="add_address_successfully">address added successfully</string>
    <string name="edit_address">Edit Address</string>
    <string name="country_code">Country code</string>
    <string name="have_you_promo_code">Have you promocode?</string>
    <string name="promo_code_applied_successfully">Promocode applied successfully</string>
    <string name="remove">Remove</string>
    <string name="please_enter_promo_code">Please enter promo code</string>
    <string name="discount">Discount</string>
    <string name="valid_upto">Valid upto</string>
    <string name="please_select_card">Please select card</string>
    <string name="edit">Edit</string>
    <string name="add_card_">Add  card</string>
    <string name="card_not_available">card not available</string>
    <string name="purchase">purchase</string>
    <string name="payment_info">Card List</string>
    <string name="edit_card">Edit Card</string>
    <string name="save_cards">Save Cards</string>

</resources>