<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/back" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/our_policy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />


                <TextView
                    android:id="@+id/tvLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />


            </RelativeLayout>


            <TextView
                android:id="@+id/tvPrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/rounded_border_bg"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_7sdp"
                android:singleLine="true"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />


            <TextView
                android:id="@+id/tvTermsCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/rounded_border_bg"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_7sdp"
                android:singleLine="true"
                android:text="@string/terms_condition"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/tvShippingPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/rounded_border_bg"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_7sdp"
                android:singleLine="true"
                android:text="@string/shipping_policy"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />


            <TextView
                android:id="@+id/tvReturnPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/rounded_border_bg"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_7sdp"
                android:singleLine="true"
                android:text="@string/return_policy"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>

    </ScrollView>
</layout>
